# ubc-aerodesign

./: README.md  pyproject.toml  setup.py
ubc-aerodesign/: loggingconfig.py  networking.py
ubcaerodesign/: __init__.py  helper.py  logging_helper.py  loggingconfig.py  networking.py
ubcaerodesign.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
