[tool.poetry]
name = "ubcaerodesign"
version = "0.1.0"
description = "PyPi package for helper utlilities"
authors = ["Midora Shiu <midorashiu@gmail.com>"]
license = "AGPL"
readme = "README.md"

[virtualenvs]
prefer-active-python = true

[tool.poetry.dependencies]
python = "3.9.13"
zmq = "^0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/venv/
| .*\.ipynb
'''