[tool.poetry]
name = "ubcaerodesign"
version = "0.7"
description = "PyPi package for helper utlilities"
authors = ["Midora <midorashiu@gmail.com>"]
license = "AGPL"
readme = "README.md"

[virtualenvs]
prefer-active-python = true

[tool.poetry.dependencies]
python = "3.9.*"
zmq = "^0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/venv/
| .*\.ipynb
'''